# vanisher

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/vanisher/: __about__.py  __init__.py  main.py
tests/: main.py
