[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wvanisher"
dynamic = ["version"]
description = "A flexible configuration management library for Python with dot notation support, environment variable overrides, and more."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["config", "configuration", "management", "control", "env", "options", "parameters", "json"]
authors = [
    { name = "woidzero", email = "wwwoidzero@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/woidzero/vanisher#readme"
Issues = "https://github.com/woidzero/vanisher/issues"
Source = "https://github.com/woidzero/vanisher"


[tool.hatch.version]
path = "src/vanisher/__about__.py"

[tool.hatch.envs.dev]
python = "3.13"
dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.dev.scripts]
check = "mypy --install-types --non-interactive {args:src/vanisher tests}"

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest",
  "coverage"
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.13", "3.12", "3.11", "3.10", "3.9", "3.8", "3.7"]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} ./tests/main.py -v"
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} ./tests/main.py -v"
cov-combine = "coverage combine"
cov-report = "coverage report"

[tool.coverage.run]
source_pkgs = ["vanisher", "tests"]
branch = true
parallel = true
omit = [
  "src/vanisher/__about__.py",
]

[tool.coverage.paths]
vanisher = ["src/vanisher", "*/vanisher/src/vanisher"]
tests = ["tests", "*/vanisher/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint]
ignore = ["FBT001", "FBT002"]

[tool.hatch.build.targets.wheel]
packages = ["src/vanisher"]
